--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Form Template</title>
+     <title>Looping Forms</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/main.css">
@@ -10,26 +10,21 @@
  </head>
  <body>
      <header>
-     <h1 class="page-header">Form Template</h1>
-        <nav class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Home</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-        </nav>
+     <h1 class="page-header">Looping Forms</h1>
      </header>
      
    <main class="wrapper">
  
-   <!-- <h2 class="subheader">Place form code below:</h2> -->
+    <h2 class="subheader">Insert your shipping information below:</h2>
+
     <form method="get" action="" class="main-form">
-    <div>
+    <div id="output">
     <label for="FirstName">First Name</label><br>
-      <input type="text" name="FirstName" id="FirstName" placeholder="First Name" required autofocus>
+      <input type="text" name="First_Name" id="FirstName" placeholder="First Name" required autofocus>
     </div>
     <div>
        <label for="LastName">Last Name</label><br>
-      <input type="text" name="LastName" id="LastName" placeholder="Last Name" required>
+      <input type="text" name="Last_Name" id="LastName" placeholder="Last Name" required>
     </div>
     <div>
     <label for="Email">Email</label><br>
@@ -53,35 +48,18 @@
         <option value="WA">Washington State</option>
       </select>
     </div>
-    <div>
-      <fieldset>
-        <legend>Would you like to be on our mailing list?</legend>
-        <labeL><input type="radio" name="JoinMailingList" value="Yes" required> Yes</labeL><br>
-        <labeL><input type="radio" name="JoinMailingList" value="No"> No</labeL>
-      </fieldset>
+        <div>
+      <label for="PostalCode">Postal Code</label><br>
+      <input type="text" name="City" id="PostalCode" placeholder="PostalCode" required>
     </div>
     <div>
-      <fieldset>
-        <legend>Interested in?</legend>
-        <labeL><input type="checkbox" name="InterestIn" value="Website" required> Website</labeL><br>
-        <labeL><input type="checkbox" name="InterestIn" value="OnlineCalendar" required> Online Calendar</labeL><br>
-        <labeL><input type="checkbox" name="InterestIn" value="ContactForm" required> Contact Form</labeL><br>
-        <labeL><input type="checkbox" name="InterestIn" value="Lollipops" required> Complimentary Lollipop</labeL><br>
-      </fieldset>
-    </div>
-    <div>
-      <label for="Comments">Comments</label><br>
+      <label for="Note">Note</label><br>
       <textarea name="Comments" id="Comments" placeholder="Comments" rows="4" cols="36"></textarea>
     </div>
       <input type="submit" value="Submit">
+  </div>
      </form>
 
-     <!--
-    <p>form goes here</p>
-    <h3>Page Origins</h3>
-    <p>The HTML/CSS comes from Sara Newman's Web Fundamentals class as taught at Seattle Central. This page provides a basis for students to build a responsive portal page.</p>
-    <p>The mobile navigation originates from <a href="https://www.w3schools.com/howto/howto_js_mobile_navbar.asp" target="_blank">W3Schools</a></p>
-    -->
     <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
           Kady Tran, All Rights Reserved ~ 
@@ -90,6 +68,33 @@
      </p>
     </footer>
   </main>
-  <script src="js/main.js"></script>   
+  <script src="js/main.js"></script>  
+  <script>
+
+    const queryString = window.location.search;
+
+  const urlParams = new URLSearchParams(queryString);
+
+
+
+
+if(queryString.length > 0){//form submitted!
+     let myOutput = `<div id="container">`;//will store data for display
+       //alert("Data submitted!");
+
+       urlParams.forEach(function(value,key){
+        //console.log(value)
+       
+        key = key.split("_").join(" ");
+        myOutput += `<p>${key}: ${value}</p>`;
+       });
+
+       myOutput += `<p><a href="index.html">CLEAR</a></p>`;
+     myOutput += `</div>`;
+   
+     document.querySelector("#output").innerHTML = myOutput;
+   }
+
+  </script> 
  </body>
 </html>
