--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
      <header>
      <h1 class="page-header">Data Processing</h1>
      </header>
+
      
    <main class="wrapper">
- 
+ <h3>Purpose:</h3>
+    <p>This page demonstrates data processing of query string data using client side JavaScript.
+
+      Upon submission, the cart items are totaled and title case is applied to the Shipping Info.</p>
     <h2 class="subheader">Add your shipping information below:</h2>
     <div id="output">
     <form method="get" action="" class="main-form">
